--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                 <img src="./media/suh.jpg" class="db bg-center cover aspect-ratio--object br-100" />
                             </div>
                             <a href="https://www.jinasuh.com/" class="ph2 ph0-ns pb3 link db" target="_blank">
-                                <p class="f5-ns mb0 fw6 black-90">Mireia Yurrita</p>
+                                <p class="f5-ns mb0 fw6 black-90">Jina Suh</p>
                                 <p class="f6 fw4 mt2 black-60">Microsoft Research</p>
                             </a>
                         </div>
