--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
 
     <footer class="pv4 ph3 ph5-m ph6-l mid-gray">
-        <small class="f6 db tc">CSCW 2023.</small>
+        <small class="f6 db tc">HCOMP 2024</small>
     </footer>
 
 
