update submission form

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 </nav>
                 <div class="tc-l mt4 mt5-m mt6-l ph5 w-75 center">
                     <h1 class="f2 f1-l fw6 white-90 mb0 lh-title">Responsible Crowdsourcing for Responsible Generative AI: <br> Engaging Crowds in AI Auditing and Evaluation</h1>
-                    <h2 class="fw3 f3 white-80 mt3 mb4">HCOMP 2024 Workshop<br>Sunday, October 15, 2024, 10am-5pm</h2>
-                    <a class="f6 link grow br3 ba bw1 ph3 pv2 mb2 dib white" target="_blank">→ Submission Form <i>Coming Soon!</i> </a>
+                    <h2 class="fw3 f3 white-80 mt3 mb4">HCOMP 2024 Workshop<br>Saturday, October 19, 2024, 10am-5pm</h2>
+                    <a class="f6 link grow br3 ba bw1 ph3 pv2 mb2 dib white" href="https://forms.gle/dvwH1rhBUmFfnq3k9" target="_blank">→ Workshop Application Form  </a>
                 </div>
             </div>
         </div>
@@ -59,19 +59,12 @@
             <div class="fn fl-ns w-60-ns">
                 <p class="f5 lh-copy mt0-ns">
                     We welcome participants who work on related areas in designing and developing responsible crowdsourcing pipeline for generative AI auditing and evaluation. Interested participants will be asked to contribute a brief statement of interest to the workshop. Submissions can take several forms: 
-                    <ol>
-                        <li class="pv1"><b>Statement of research interest</b> for attending the workshop by filling out questions in the submission form.
-                        <li class="pv1"><b>Position paper or Paper Draft</b> discussing or contributing to one or more themes highlighted in this proposal. </li>
-                        <li class="pv1"><b>Video or audio demo of an interactive system</b> that is relevant to engaging crowds in AI auditing and evaluation. Submissions should fall within 3-5 minutes in length.</li>
-                        <li class="pv1"><b>"Encore" submission</b> of a highly-relevant conference or journal paper.</li>
-                        </li>
-                    </ol>
                 </p>
                 <p class="f5 lh-copy">                
                     Each submission will be reviewed by 1-2 organizers and accepted based on quality of the submission and diversity of perspectives to allow for a meaningful exchange of knowledge between a broad range of stakeholders.
                 </p>
                 <p>
-                    <a class="f6 link grow br3 ba bw1 ph3 pv2 mb2 dib accent-txt" target="_blank">→ Submission Form <i>Coming soon!</i> (deadline 8/21/24)</a>
+                    <a class="f6 link grow br3 ba bw1 ph3 pv2 mb2 dib accent-txt" href="https://forms.gle/dvwH1rhBUmFfnq3k9" target="_blank">→ Workshop Application Form (deadline 9/16/24)</a>
                 </p>
             </div>
         </article>
@@ -83,9 +76,9 @@
                 </h1>
             </header>
             <div class="fn fl-ns w-70-ns">
-                <p><b>Submission deadline</b>: Wednesday, August 21, 2024, 11:59pm AoE</p>
-                <p><b>Notification of acceptance</b>: Friday, September 06, 2023</p>
-                <p><b>Workshop date</b>: TBA, between October 16–19, 2024</p>
+                <p><b>Submission deadline</b>: Monday, September 16, 2024, 11:59pm AoE</p>
+                <p><b>Notification of acceptance</b>: Friday, September 20, 2024</p>
+                <p><b>Workshop date</b>: 10 am - 5 pm, Saturday, October 19, 2024</p>
                 <p><b>Workshop location</b>: TBA, somewhere at Pittsburgh!</p>
             </div>
         </article>
@@ -119,7 +112,7 @@
         <article class="cf ph3 ph5-ns pv5" id="agenda">
             <header class="fn fl-ns w-30-ns pr4-ns">
                 <h1 class="f3 lh-title fw5 mb3 mt0 pt3 bt bw2 accent-txt">
-                    Accepted Work
+                    Accepted Participants
                 </h1>
             </header>
             <div class="fn fl-ns w-70-ns">
