--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                         <li class="pv1"><b>Coffee break</b> <i>(2:00-2:30pm)</i>.</li>
                         <li class="pv1"><b>Focus group activity #2</b> <i>(2:30-3:30pm)</i>: Explore opportunities and future research agenda.</li>
                         <li class="pv1"><b>Closing remarks</b> <i>(3:30-4:00pm)</i>.</li>
+                        <li class="pv1"><b>Social hour</b> <i>(4:00-5:00pm)</i>.</li>
                     </ul>
                 </p>
             </div>
