--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </header>
             <div class="fn fl-ns w-60-ns">
                 <p class="f5 lh-copy mt0-ns">
-                    We welcome participants who work on related areas in designing and developing responsible crowdsourcing pipeline for generative AI auditing and evaluation. Interested participants will be asked to contribute a brief statement of interest to the workshop. Submissions can take several forms: 
+                    We welcome participants who work on related areas in designing and developing responsible crowdsourcing pipeline for generative AI auditing and evaluation. Interested participants will be asked to contribute a brief statement of interest to the workshop by filling out a workshop application form.
                 </p>
                 <p class="f5 lh-copy">                
                     Each submission will be reviewed by 1-2 organizers and accepted based on quality of the submission and diversity of perspectives to allow for a meaningful exchange of knowledge between a broad range of stakeholders.
