--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 </h1>
             </header>
             <div class="fn fl-ns w-70-ns">
-                <p><b>Submission deadline</b>: Friday, September 06, 2024, 11:59pm AoE</p>
-                <p><b>Notification of acceptance</b>: Friday, September 13, 2024</p>
+                <p><b>Submission deadline</b>: Friday, September 20, 2024, 11:59pm AoE <s> Friday, September 06, 2024, 11:59pm AoE </s> </p>
+                <p><b>Notification of acceptance</b>: Friday, September 27, 2024, 11:59pm AoE <s> Friday, September 13, 2024 </s></p>
                 <p><b>Workshop date</b>: 10 am - 5 pm, Saturday, October 19, 2024</p>
                 <p><b>Workshop location</b>: TBA, somewhere at Pittsburgh!</p>
             </div>
